--- a/styles.css
+++ b/styles.css
@@ -20,10 +20,10 @@ html, body {
 
 body {
   display: flex;
+  flex-flow: column wrap;
   justify-content: center;
   align-items: center;
   font-family: var(--kumbh-sans);
-  font-size: 1.125rem;
   background-color: var(--dark-cyan);
   background-image: url("images/bg-pattern-top.svg"),
     url("images/bg-pattern-bottom.svg");
@@ -36,7 +36,7 @@ body {
   max-width: 350px;
   border-radius: 10px;
   margin: 5%;
-  box-shadow: 0px 4px 50px 2px rgb(0 0 0 / 30%);
+  box-shadow: 0px 4px 50px 2px rgb(0 0 0 / 15%);
 }
 
 /*  profile card background*/
@@ -93,6 +93,16 @@ hr.line {
   flex-flow: row wrap;
 }
 
+/* footer section */
+.attribution {
+  font-size: 11px;
+  text-align: center;
+}
+
+.attribution a {
+  color: hsl(228, 45%, 44%);
+}
+/* for responsiveness */
 @media screen and (min-width:375px) {
   body {
     background-position: left -17rem top -29rem, right -15rem bottom -36rem;
